plugins {
    id 'java'
    alias(libs.plugins.spring.framework.boot)
    alias(libs.plugins.spring.dependency.management)
}

group = 'com'
version = '0.0.1-SNAPSHOT'


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':proto')
    annotationProcessor 'org.projectlombok:lombok'
    implementation libs.bundles.business.service.additional
    annotationProcessor libs.mapstruct.processor
    implementation libs.bundles.core
    implementation libs.bundles.business.service
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.grpc:spring-grpc-dependencies:${libs.versions.grpc.version.get()}"
        mavenBom("org.springframework.cloud:spring-cloud-dependencies:${libs.versions.spring.cloud.get()}")
    }
}


tasks.named('test') {
    useJUnitPlatform()
}
